[package]
name = "watercloudfall"
version = "0.0.1"
edition = "2021"

[dependencies]
# Use latest commit from all
winit = { git = "https://github.com/rust-windowing/winit.git", features = ["rwh_05", "rwh_06"] }
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git" }
cgmath = { git = "https://github.com/rustgd/cgmath.git" }
rand = { git = "https://github.com/rust-random/rand.git" }
serde = { git = "https://github.com/serde-rs/serde.git" , features = ["derive"] }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git" } 
tracing = { git = "https://github.com/tokio-rs/tracing" }
image = { git = "https://github.com/image-rs/image" }
softbuffer = { git = "https://github.com/rust-windowing/softbuffer" }
glam = { git = "https://github.com/bitshifter/glam-rs.git" }

#vulkano-util = { git = "https://github.com/vulkano-rs/vulkano.git" }
#vulkano-win = { git = "https://github.com/vulkano-rs/vulkano.git" , features = ["raw-window-handle_", "winit_"] }